login, register et mail terminé

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 
 @theme {
+
+  /* Colors */
   --color-primary: #1DA1F2;
   --color-primary-hover: #0F81C7;
   --color-primary-active: #0F7CBF;
@@ -10,14 +12,22 @@
   --color-dark: #3D6C93;
 
   --color-red: #E0245E;
-  --color-red-very-light: #F8D7DA;
   --color-red-light: #F5C6CB;
+  --color-red-very-light: #F8D7DA;
+
+  --color-green: #17BF63;
+  --color-green-ligt: #B8E8D9;
+  --color-green-very-light: #D1F0E5;
 
 
-
+  /* UI Variable */
   --color-error: var(--color-red);
   --color-error-bg: var(--color-red-very-light);
   --color-error-border: var(--color-red-light);
+
+  --color-success: var(--color-green);
+  --color-success-bg: var(--color-green-very-light);
+  --color-success-border: var(--color-green-light);
 
   --color-border: var(--color-very-light);
 
